--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "ammap3": "^3.21.13",
     "awesome-bootstrap-checkbox": "1.0.0-alpha.5",
     "bootstrap": "^4.0.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "chart.js": "^2.6.0",
     "detect-browser": "^3.0.0",
     "element-resize-detector": "^1.1.12",
     "epic-spinners": "^1.0.1",
+    "firebase": "^5.5.7",
     "flag-icon-css": "^3.0.0",
     "font-awesome": "^4.7.0",
     "gemini-scrollbar": "^1.5.1",
@@ -42,6 +44,7 @@
     "vue-bulma-expanding": "0.0.1",
     "vue-chartjs": "^3.4.0",
     "vue-color": "^2.4.6",
+    "vue-firestore": "^0.3.1",
     "vue-router": "^3.0.1",
     "vue-slider-component": "2.7.6",
     "vue-toasted": "^1.1.24",
